[package]
name = "signal-decrypt-backup-wasm"
version = "0.1.1"
edition = "2021"
description = "Get the raw database from your Signal backup. Written for webassembly"
repository = "https://git.duskflower.dev/duskflower/signal-decrypt-backup-wasm"
license = "GPL-3-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
aes = "0.8"
ctr = "0.9"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"
prost-types = "0.11"
serde_bytes = "0.11.15"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.11"
